--- a/SWP291_Team2_SE1829NJ/web/bootstrap/css/animate.css
+++ b/SWP291_Team2_SE1829NJ/web/bootstrap/css/animate.css
@@ -3,7 +3,7 @@
 /*!
 Animate.css - http://daneden.me/animate
 Licensed under the MIT license - http://opensource.org/licenses/MIT
-
+Linh học chán đời
 Copyright (c) 2015 Daniel Eden
 */
 
