--- a/SWP291_Team2_SE1829NJ/web/bootstrap/css/style.css
+++ b/SWP291_Team2_SE1829NJ/web/bootstrap/css/style.css
@@ -8312,7 +8312,7 @@ h1, h2, h3, h4, h5,
       -o-transition: .3s all ease-out;
       transition: .3s all ease-out; }
     .ftco-navbar-light.scrolled .navbar-brand {
-      color: #000000; }
+      color: white; }
 
 .navbar-brand {
   font-weight: 700;
